v1.2.0 배포 (#601)
* chore: 빌드 시 docs가 jar 파일에 이동하도록 수정 (#78)

* test: 예약 전송 RestDocs 문서 생성 (#84)

* feat: google auth redirect url domain으로 수정 (#87)

* refactor: url 수정 (#88)

제가 합니다

* hotfix: 1차 api change (#89)

feat: 1차 api change

* feat: 요청 받은 약속, 요청한 약속 페이지 UI를 구현한다. (#82)

* feat: Choice option이 나오는 slider 컴파운드 컴포넌트 구현

* refactor: requested => reservation으로 네이밍 수정

* refactor: TabsNav 사용하는 곳에서 스타일 확장 가능하도록 수정

* feat: Slide해서 option 선택할 수 있는 Reservation 구현

* feat: Reservations 라우터 추가

* feat: style 수정, margin-bottom 말고 gap으로 공간 주도록 수정

* fix: 이름 수정 시 enter submit 안되던 오류 수정

* feat: 내 정보 페이지 뒤로 가기 시 메인으로 가도록 구현

* refactor: 사용 안하는 기능 제거

* refactor: CouponContentResponse 쿠폰 타입을 소문자로 변경한다. (#94)

refactor: CouponContentResponse 쿠폰 타입을 소문자로 변경

* feat: 예약 승인/거절 기능을 구현한다. (#85)

* refactor: couponStatus RESERVING 상태 추가

* feat: 예약 승인 기능

* feat: 예약 승인 api

* docs: reservation docs 수정

* style: 코드 포맷팅

* refactor: 예약 상태 변경시 검증 로직 메서드 분리

Co-authored-by:  sure-why-not <pkse1213@gmail.com>
Co-authored-by:  jayjaehunchoi <wogns0108@naver.com>

* feat: 자동로그인 및 server State 의 recoil 의존 제거 (#92)

* feat: 1차 api change

* feat: recoil auth 삭제

* refactor: dev환경 url 분리

* feat: page hooks에서 recoil auth 삭제

* feat: localStorage만 이용한 자동로그인

* feat: dev 용 mock과 auth 작동 수정

* refactor: gridCoupon 배경색이 fetch 이후에 변경되도록 수정

* feat: 쿠폰 상세 정보 모달을 구현한다. (#95)

* feat: 쿠폰 상세 모달 구현

* feat: 쿠폰 상세 모달 구현

* refactor: Modal 보여주는 로직 전역으로 관리하도록 수정

Co-authored-by KangYunHo1221 <ansghkdbsgh@gmail.com>

* hotfix: backend url 수정 (#96)

* feat: 예약 요청 시 시간도 포함해서 보내도록 수정 (#102)

* refactor: cors origin 추가 (#104)

* feat: 유저 정보 조회 및 이름 수정 페이지 API를 연동한다. (#98)

* feat: 유저 정보 조회 및 이름 수정 msw 작성

* feat: 유저 정보 조회 및 이름 수정 api 연동

* refactor: socialNickName email로 수정 및 타입 재사용

* feat: 하단 navigator로 페이지 연결(프로필, 받은 요청, 쿠폰보내기) (#105)

* refactor: url 수정

* feat: bottom Nav 추가

* refactor: origin을 모두 허용