@@ -2,6 +2,7 @@ package com.woowacourse.thankoo.acceptance.builder;
 
 import static com.woowacourse.thankoo.acceptance.support.fixtures.RestAssuredRequestFixture.getWithToken;
 import static com.woowacourse.thankoo.acceptance.support.fixtures.RestAssuredRequestFixture.postWithToken;
+import static com.woowacourse.thankoo.acceptance.support.fixtures.RestAssuredRequestFixture.putWithToken;
 import static com.woowacourse.thankoo.common.fixtures.CouponFixture.MESSAGE;
 import static com.woowacourse.thankoo.common.fixtures.CouponFixture.TITLE;
 import static com.woowacourse.thankoo.common.fixtures.CouponFixture.TYPE;
@@ -26,21 +27,27 @@ public class CouponAssured {
     }
 
     public static CouponRequest createCouponRequest(final List<Long> receiverIds,
+                                                    final Long organizationId,
                                                     final String type,
                                                     final String title,
                                                     final String message) {
-        return new CouponRequest(receiverIds, new ContentRequest(type, title, message));
+        return new CouponRequest(receiverIds, organizationId, new ContentRequest(type, title, message));
     }
 
-    public static CouponRequest 쿠폰_요청(final Long... ids) {
-        return createCouponRequest(Arrays.asList(ids), TYPE, TITLE, MESSAGE);
+    public static CouponRequest 쿠폰_요청(final Long organizationId, final Long id) {
+        return 쿠폰_요청(organizationId, List.of(id));
     }
 
-    public static CouponRequest 잘못된_쿠폰_요청(final String type,
+    public static CouponRequest 쿠폰_요청(final Long organizationId, final List<Long> receiverIds) {
+        return createCouponRequest(receiverIds, organizationId, TYPE, TITLE, MESSAGE);
+    }
+
+    public static CouponRequest 잘못된_쿠폰_요청(final Long organizationId,
+                                          final String type,
                                           final String title,
                                           final String message,
                                           final Long... ids) {
-        return createCouponRequest(Arrays.asList(ids), type, title, message);
+        return createCouponRequest(Arrays.asList(ids), organizationId, type, title, message);
     }
 
     public static CouponRequestBuilder request() {
@@ -54,23 +61,32 @@ public class CouponAssured {
             return this;
         }
 
-        public CouponRequestBuilder 받은_쿠폰을_조회한다(final String accessToken, final String status) {
-            response = getWithToken("/api/coupons/received?status=" + status, accessToken);
+        public CouponRequestBuilder 받은_쿠폰을_조회한다(final Long organizationId, final String accessToken,
+                                                final String status) {
+            response = getWithToken("/api/coupons/received?status=" + status + "&organization=" + organizationId,
+                    accessToken);
             return this;
         }
 
-        public CouponRequestBuilder 보낸_쿠폰을_조회한다(final String accessToken) {
-            response = getWithToken("/api/coupons/sent", accessToken);
+        public CouponRequestBuilder 보낸_쿠폰을_조회한다(final Long organizationId, final String accessToken) {
+            response = getWithToken("/api/coupons/sent?organization=" + organizationId, accessToken);
             return this;
         }
 
-        public CouponRequestBuilder 쿠폰_단건_정보를_조회한다(final Long couponId, final String accessToken) {
-            response = getWithToken("/api/coupons/" + couponId, accessToken);
+        public CouponRequestBuilder 쿠폰_단건_정보를_조회한다(final Long organizationId, final Long couponId,
+                                                   final String accessToken) {
+            response = getWithToken("/api/coupons/" + couponId + "?organization=" + organizationId, accessToken);
             return this;
         }
 
         public CouponRequestBuilder 주고_받은_쿠폰_개수를_조회한다(final String accessToken) {
             response = getWithToken("/api/coupons/count", accessToken);
+            return this;
+        }
+
+        public CouponRequestBuilder 쿠폰을_즉시_사용한다(final Long organizationId, final Long couponId,
+                                                final String accessToken) {
+            response = putWithToken("/api/coupons/" + couponId + "/use", accessToken, organizationId);
             return this;
         }
 
@@ -114,6 +130,14 @@ public class CouponAssured {
                     () -> assertThat(couponDetailResponse.getMeeting()).isNotNull(),
                     () -> assertThat(couponDetailResponse.getReservation()).isNull()
             );
+        }
+
+        public void 쿠폰의_상태가_조회됨(final Long couponId, final String status) {
+            List<CouponResponse> responses = bodies(CouponResponse.class);
+            CouponResponse couponResponse = responses.stream()
+                    .filter(it -> it.getCouponId().equals(couponId)).findFirst()
+                    .orElseThrow();
+            assertThat(couponResponse.getStatus()).isEqualTo(status);
         }
 
         public void 쿠폰_개수가_조회됨(final int sentCount, final int receivedCount) {
